2021-10-01 Danilo Chang

	* Implement command: convexityDefects, matchShapes
	* Improve convexHull command
	* Apply Christian's patch

2021-09-30 Danilo Chang

	* Change AKAZE Diffusivity type variable's name (AKAZE to KAZE)
	* Implement command: KAZE
	* Apply Christian's patch
	* Implement command: BOWKMeansTrainer, BOWImgDescriptorExtractor
	* Implement command: insertChannel
	* Implement command: arcLength, buildPyramid, pointPolygonTest

2021-09-29 Danilo Chang

	* Implement command: extractChannel
	* Implement command: MSER

2021-09-28 Danilo Chang

	* Implement command: computeCorrespondEpilines, findFundamentalMat
	* Implement command: getBuildInformation
	* Implement command: solvePnP

2021-09-27 Danilo Chang

	* Implement command: initUndistortRectifyMap, projectPoints
	* Implement command: getOptimalNewCameraMatrix, undistort
	* Implement command: calibrateCamera
	* Implement command: createHanningWindow, phaseCorrelate
	* Implement command: setRNGSeed, randShuffle
	* Implement command: warpPolar

2021-09-26 Danilo Chang

	* Implement command: fillPoly, CLAHE, EMD, SVDecomp, SVBackSubst

2021-09-25 Danilo Chang

	* Apply Christian's patch (POC thread support)

2021-09-24 Danilo Chang

	* Implement command: minMaxIdx
	* Implement command: RTrees, ANN_MLP
	* Apply Christian's patch

2021-09-23 Danilo Chang

	* Implement command: DTrees, Boost

2021-09-22 Danilo Chang

	* Implement command: fitLine (for 2D point set)
	* Implement command: LogisticRegression, SVMSGD
	* Add pop_back and push_back method to MATRIX function

2021-09-21 Danilo Chang

	* Bump version to v0.9

2021-09-20 Danilo Chang

	* Apply Christian's patch (FileStorage interface)
	* Implement command: findChessboardCorners, drawChessboardCorners
	* Implement command: getGaussianKernel, sepFilter2D
	* Implement command: compareHist

2021-09-19 Danilo Chang

	* Re-design moments command
	* Implement command: determinant
	* Implement command: eigen, calcCovarMatrix, Mahalanobis