@@ -1,5 +1,6 @@
 2021-10-01 Danilo Chang
 
+	* Implement command: BackgroundSubtractorKNN
 	* Implement command: convexityDefects, matchShapes
 	* Improve convexHull command
 	* Apply Christian's patch
